--- a/StoreApp/appsettings.json
+++ b/StoreApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=C:\\Users\\alord\\Desktop\\MVC\\ProductDb.db"
+    "sqlConnection": "Data Source=C:\\Users\\alord\\Desktop\\MVC\\ProductDb.db",
+    "DefaultConnection": "Server=DESKTOP-9M9HU4N;Trusted_Connection=True;Database=StoreApp;TrustServerCertificate=True; "
   }
 }
